--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "memory-spiral",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./index.js",
   "bin": {
-    "ms": "index.js"
+    "ms": "./index.js"
   },
   "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "files": [
-    "package.json",
-    "index.js"
+    "./package.json",
+    "./index.js",
+    "./README.md"
   ]
 }
